# sdlc-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code_agent.yml  pr_ci_review.yml  quality_ci.yml
sdlc_agent/: __main__.py  cli.py  code_agent.py  git_utils.py  github_api.py  prompts.py  reviewer.py  settings.py  state.py  text_utils.py
sdlc_agent/llm/: __init__.py  openai_chat.py  yandex_completion.py
tests/: test_state.py  test_text_utils.py
