[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-agent"
version = "0.1.0"
description = "GitHub SDLC coding agent + AI reviewer (issues -> PR -> CI -> review -> fixes)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name="Your Team", email="team@example.com"},
]
dependencies = [
  "PyGithub>=2.4.0",
  "typer>=0.12.3",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240712",
  "pytest-cov>=5.0.0",
  "diff-cover>=9.0.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
]

[project.scripts]
code-agent = "sdlc_agent.cli:code_app"
review-agent = "sdlc_agent.cli:review_app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "UP022", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["sdlc_agent"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
